# voico_backend

./: .gitignore  README.md
backend/: .env.example  db.sqlite3  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py
backend/app/database/alembic/: env.py
backend/app/database/alembic/versions/: c3a82c12689e_add_notes_to_calls.py
backend/app/modules/calls/: ai.py  repository.py  router.py  schema.py  service.py  tasks.py
backend/tests/: conftest.py  test_calls_expiry.py  test_calls_filters.py  test_calls_webhook.py  test_notes_concurrency.py  test_notes_endpoint.py
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/components/ui/: input.tsx  select.tsx  textarea.tsx
frontend/src/modules/calls/: CallDetailDrawer.tsx  CallsPage.tsx  CallsTable.tsx  FilterBar.tsx
frontend/src/types/: calls.ts
